Temporary version of page

--- a/src/error/styles.css
+++ b/src/error/styles.css
@@ -43,7 +43,7 @@
   letter-spacing: 0.02em;
   font-weight: 400;
   font-size: 2em;
-  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
   line-height: 1em;
 }
 
