--- a/src/home/styles.css
+++ b/src/home/styles.css
@@ -8,6 +8,62 @@
  * LICENSE.txt file in the root directory of this source tree.
  */
 
+.grid {
+  display: flex;
+  height: 400px;
+}
+
+.cell {
+  position: relative;
+  flex-grow: 1;
+  transition: flex-grow 0.6s cubic-bezier(0.4,0,0.2,1) 0.5s;
+  &:hover {
+    flex-grow: 3;
+    transition-delay: 0;
+    & .link {
+      &::after {
+        background-color: rgba(0, 0, 0, 0);
+      }
+      & h3, & p {
+        transition-delay: 0.5s;
+        opacity: 1;
+      }
+    }
+  }
+  &:nth-child(3n+1) {
+    padding-left: 0;
+  }
+}
+
+.link {
+  display: block;
+  height: 300px;
+  position: absolute;
+  top: 0;
+  text-decoration: none;
+  & h3, & p {
+    opacity: 0;
+    transition: opacity 0.6s cubic-bezier(0.4,0,0.2,1) 0;
+    color: #656565;
+  }
+  & h3 {
+    padding-top: 300px;
+    margin: 4px 0;
+    font-size: 20px;
+  }
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    transition: background-color 0.6s cubic-bezier(0.4,0,0.2,1);
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .content {
     padding: 0 16px;
