--- a/src/home/styles.css
+++ b/src/home/styles.css
@@ -12,7 +12,7 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 450px;
+  height: 520px;
 }
 
 .link {
@@ -31,9 +31,12 @@
 }
 
 @media screen and (min-width: 500px) {
+  .cell {
+    height: 450px;
+  }
   .grid {
     display: flex;
-    height: 400px;
+    height: 500px;
   }
   .link {
     position: absolute;
